# ffplay

./: .gitignore  CMakeLists.txt  README.md
libs/ffmpeg/lib/: libavdevice.58.13.100.dylib  libavfilter.7.110.100.dylib  libavformat.58.76.100.dylib  libavresample.4.0.0.dylib  libavutil.56.70.100.dylib  libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib
libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: cmdutils.c  cmdutils.h  config.h  ffplay.c
